packages/swc-magic/transform/tests/errors/wrong-jsx-expression-type/output-swc.js
import _JSXStyle from "swc-magic/style";
export default (()=><div>

    <style jsx>

      {[]}

    </style>

  </div>);
